--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 		  <groupId>uk.ac.ebi</groupId>
 		  <artifactId>jutils</artifactId>
-		  <version>4.0.1-SNAPSHOT</version>
+		  <version>4.2</version>
 		</dependency>
 	
 		<dependency>
