--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>uk.ac.ebi.fg</groupId>
   <artifactId>java2rdf</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <packaging>jar</packaging>
 
   <name>java2rdf library</name>
@@ -62,7 +62,7 @@
 		<dependency>
 		  <groupId>uk.ac.ebi</groupId>
 		  <artifactId>jutils</artifactId>
-			<version>6.0.1-SNAPSHOT</version>
+			<version>7.0.1-SNAPSHOT</version>
 		</dependency>
 	
 		<dependency>
