Migrating to Jena 3.9.0.

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <owlapi.version>3.5.2</owlapi.version>
-		<commonsrdf.version>0.3.0-incubating</commonsrdf.version>
-    <jena.version>3.5.0</jena.version>
+		<commonsrdf.version>0.5.0</commonsrdf.version>
+    <jena.version>3.9.0</jena.version>
     <rdfutils.version>2.0.1-SNAPSHOT</rdfutils.version>
     <slf4j.version>1.7.5</slf4j.version>
   </properties>
@@ -68,7 +68,7 @@
 		<dependency>
 		  <groupId>info.marcobrandizi</groupId>
 			<artifactId>rdfutils-commonsrdf</artifactId>
-	  		<version>${rdfutils.version}</version>
+	  	<version>${rdfutils.version}</version>
 		</dependency>
 	
 		<dependency>
@@ -76,10 +76,10 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.3</version>
 			<exclusions>
-					<exclusion>
-							<groupId>commons-logging</groupId>
-							<artifactId>commons-logging</artifactId>
-					</exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>  
 
@@ -104,19 +104,15 @@
 		  <version>${commonsrdf.version}</version>
 		  <scope>test</scope>
 		  <exclusions>
+		  	<!-- See below -->
 				<exclusion>
 					<groupId>org.apache.jena</groupId>
 					<artifactId>jena-osgi</artifactId>
 				</exclusion>		  
 		  </exclusions>
 		</dependency>
-		<dependency>
-		  <groupId>org.apache.jena</groupId>
-		  <artifactId>apache-jena-libs</artifactId>
-		  <type>pom</type>
-		  <scope>test</scope>
-			<version>${jena.version}</version>
-		</dependency>
+
+		<!-- Used by commons-rdf-jena, we align it to the rest of Jena -->		
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-osgi</artifactId>
