--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>uk.ac.ebi.fg</groupId>
   <artifactId>java2rdf</artifactId>
-  <version>2.1.1-SNAPSHOT</version>
+  <version>2.1.1</version>
   <packaging>jar</packaging>
 
   <name>java2rdf library</name>
@@ -23,7 +23,7 @@
     <owlapi.version>3.5.2</owlapi.version>
 		<commonsrdf.version>0.5.0</commonsrdf.version>
     <jena.version>3.10.0</jena.version>
-    <rdfutils.version>2.0.1-SNAPSHOT</rdfutils.version>
+    <rdfutils.version>2.1</rdfutils.version>
     <slf4j.version>1.7.5</slf4j.version>
   </properties>
 
@@ -62,7 +62,7 @@
 		<dependency>
 		  <groupId>uk.ac.ebi</groupId>
 		  <artifactId>jutils</artifactId>
-			<version>9.0</version>
+			<version>10.0-SNAPSHOT</version>
 		</dependency>
 	
 		<dependency>
