--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: java
+
 jdk:
-  - openjdk8
+  - openjdk11
+  
 script: mvn deploy --settings settings.xml
+
+cache:
+  directories:
+    - $HOME/.m2
