--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>uk.ac.ebi.fg</groupId>
   <artifactId>java2rdf</artifactId>
-  <version>2.1.3-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>java2rdf library</name>
@@ -23,7 +23,7 @@
     <owlapi.version>3.5.2</owlapi.version>
 		<commonsrdf.version>0.5.0</commonsrdf.version>
     <jena.version>3.10.0</jena.version>
-    <rdfutils.version>2.1</rdfutils.version>
+    <rdfutils.version>3.0-SNAPSHOT</rdfutils.version>
     <slf4j.version>1.7.5</slf4j.version>
   </properties>
 
@@ -131,8 +131,8 @@
       <plugin>
 	      <artifactId>maven-compiler-plugin</artifactId>
 	      <configuration>
-	        <source>1.8</source>
-	        <target>1.8</target>
+	        <source>11</source>
+	        <target>11</target>
 	        <encoding>UTF-8</encoding>
 	      </configuration>
 	    </plugin>
