--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>uk.ac.ebi.fg</groupId>
   <artifactId>java2rdf</artifactId>
-  <version>2.1.3-SNAPSHOT</version>
+  <version>2.1.4</version>
   <packaging>jar</packaging>
 
   <name>java2rdf library</name>
