Testing GH Actions.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Deploy
       #run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      run: echo $TEST
+      run: echo "The VAR IS: '$TEST'"
       env:
         GITHUB_TOKEN: ${{ github.token }}
         REPO_PWD: ${{ secrets.REPO_PWD }}
