--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
 
     - name: Deploy
-      run: mvn deploy -s settings.xml
+      run: mvn deploy -s settings.xml  --no-transfer-progress --batch-mode
       env:
         GITHUB_TOKEN: ${{ github.token }}
         REPO_PWD: ${{ secrets.REPO_PWD }}
