--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,6 @@ jobs:
     - name: Deploy
       run: mvn deploy -s settings.xml  --no-transfer-progress --batch-mode
       env:
+        GITHUB_TOKEN: ${{ github.token }}
         REPO_USER: ${{ secrets.REPO_USER }}
         REPO_PWD: ${{ secrets.REPO_PWD }}
