--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
   - openjdk11
   
-script: mvn deploy --settings settings.xml
+script: mvn deploy --settings maven-settings.xml
 
 cache:
   directories:
