--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
-    <jena.version>4.1.0-SNAPSHOT</jena.version>
+    <jena.version>4.1.0</jena.version>
 	  <commonsrdf.version>1.0-SNAPSHOT</commonsrdf.version>
     
     <rdfutils.version>3.0-SNAPSHOT</rdfutils.version>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>0.9.29</version>
+			<version>1.2.3</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>2.8.0</version>
 		</dependency>
 
 		
