--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 	  <groupId>info.marcobrandizi</groupId>
 	  <artifactId>rdfutils</artifactId>
-	  <version>4.0.3</version>
+	  <version>4.0.4-SNAPSHOT</version>
 	</parent>
 
   <groupId>uk.ac.ebi.fg</groupId>
