--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 	  <groupId>info.marcobrandizi</groupId>
 	  <artifactId>rdfutils</artifactId>
-  	<version>4.1.1-SNAPSHOT</version>
+  	<version>5.0-SNAPSHOT</version>
 	</parent>
 
   <groupId>uk.ac.ebi.fg</groupId>
   <artifactId>java2rdf</artifactId>
-  <version>4.1.1-SNAPSHOT</version>
+  <version>5.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>java2rdf library</name>
@@ -18,7 +18,7 @@
   	java2rdf is a library to map JavaBeans onto RDF/OWL classes, based on declarations that map JavaBeans on
   	subject-centric RDF graphs.
 	</description>
-  <url>http://github.com/marco-brandizi/java2rdf</url>
+  <url>https://github.com/EBIBioSamples/java2rdf</url>
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:EBIBioSamples/java2rdf.git</developerConnection>
