--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 	  <groupId>info.marcobrandizi</groupId>
 	  <artifactId>rdfutils</artifactId>
-  	<version>5.0-SNAPSHOT</version>
+  	<version>5.0</version>
 	</parent>
 
   <groupId>uk.ac.ebi.fg</groupId>
